Update Daily Show
Resized plots.

--- a/Daily Show- Map Reduce Visualization.ipynb
+++ b/Daily Show- Map Reduce Visualization.ipynb
@@ -289,6 +289,8 @@
     "sub.set_ylabel('Number of Guests')\n",
     "sub.set_xticks(range(1,len(guest_count)+1))\n",
     "sub.set_xticklabels(professions, rotation = 90)\n",
+    "sub.set_xlim(right = len(guest_count)+1)\n",
+    "sub.set_title('Most Frequent Professions to Visit Daily Show')\n",
     "plt.show()"
    ]
   },
