Change data reference to data folders

--- a/Census- Spark Dataframes.ipynb
+++ b/Census- Spark Dataframes.ipynb
@@ -57,7 +57,7 @@
    ],
    "source": [
     "#Preview JSON file\n",
-    "with open ('data\Census_2010.json') as fileObject:\n",
+    "with open ('data\\Census_2010.json') as fileObject:\n",
     "    for i in range(0,10):\n",
     "        print (fileObject.readline())"
    ]
@@ -79,7 +79,7 @@
    ],
    "source": [
     "#Read data as dataframe\n",
-    "CensusDF = sqlContext.read.json('data\Census_2010.json')\n",
+    "CensusDF = sqlContext.read.json('data\\Census_2010.json')\n",
     "\n",
     "#Check CensusDF type\n",
     "print('CensusDF Datatype:', type(CensusDF))"
