Changed data reference to data folders

--- a/Census- Spark SQL.ipynb
+++ b/Census- Spark SQL.ipynb
@@ -47,7 +47,7 @@
    ],
    "source": [
     "#Read data as dataframe\n",
-    "CensusDF = sqlContext.read.json('Census_2010.json')\n",
+    "CensusDF = sqlContext.read.json('data\\Census_2010.json')\n",
     "\n",
     "#Register table with SQL Context\n",
     "CensusDF.registerTempTable('Census_2010')\n",
@@ -180,13 +180,13 @@
    ],
    "source": [
     "#Read additional tables into SQL Context\n",
-    "Census2010df = sqlContext.read.json('Census_2010.json')\n",
+    "Census2010df = sqlContext.read.json('data\\Census_2010.json')\n",
     "Census2010df.registerTempTable('Census_2010')\n",
     "\n",
-    "Census2000df = sqlContext.read.json('Census_2000.json')\n",
+    "Census2000df = sqlContext.read.json('data\\Census_2000.json')\n",
     "Census2000df.registerTempTable('Census_2000')\n",
     "\n",
-    "Census1990df = sqlContext.read.json('Census_1990.json')\n",
+    "Census1990df = sqlContext.read.json('data\\Census_1990.json')\n",
     "Census1990df.registerTempTable('Census_1990')\n",
     "\n",
     "print (sqlContext.tableNames())"
