Change data reference to data folders

--- a/Hamlet- Map Reduce.ipynb
+++ b/Hamlet- Map Reduce.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "\n",
     "#Print first 5 elements of RDD\n",
-    "raw_data = sc.textFile(\"hamlet.txt\")\n",
+    "raw_data = sc.textFile(\"data\\hamlet.txt\")\n",
     "raw_data.take(5)\n"
    ]
   },
